k8s/homer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer-deployment
  labels:
    app: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer:latest
          resources:
            requests:
              cpu: 15m
              memory: 105M
            limits:
              cpu: 15m
              memory: 105M
          ports:
          - containerPort: 8080
          volumeMounts:
            - mountPath: www/assets/config.yml
              name: homer-config
              subPath: config.yml
            - mountPath: www/assets/icons
              name: homer-data
              subPath: www/assets/icons
          imagePullPolicy: IfNotPresent
      volumes:
      - name: homer-config
        configMap:
          name: homer-config
          items:
            - key: config.yml
              path: config.yml
      - name: homer-data
        persistentVolumeClaim:
          claimName: homer-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: homer-service
  labels:
    app: homer
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: homer
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: homer-ingress
  labels:
    app: homer
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - 'internal.lazz.tech'
  rules:
  - host: internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: homer-service
          servicePort: 80
